--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>trustlayer-ui</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="description" content="TrustLayer - Instant, explainable risk analysis for suspicious URLs. Scan links with clarity, not guesswork." />
+    <meta name="theme-color" content="#0B1220" />
+    <title>TrustLayer - URL Risk Triage</title>
   </head>
   <body>
     <div id="root"></div>
